--- a/amazone.css
+++ b/amazone.css
@@ -7,7 +7,7 @@
 marquee{
     background-color: #0f1111;
     color: #febd68;
-    margin-bottom: -5px;
+    margin-bottom: -0.3125rem;
 
 }
 
@@ -16,8 +16,8 @@ marquee{
     background-color: blanchedalmond;
 }
 #div1{
-    width: 25px;
-    height: 25px;
+    width: 1.5625rem;
+    height: 1.5625rem;
     display: inline-block;
     border-radius: 50%;
     animation: div1 infinite 0.2s ease-in;
@@ -34,7 +34,7 @@ marquee{
 }
 
 .border:hover{
-    border: 1px solid white;
+    border:1px solid white;
 }
 .bar:hover{
     border: 2px solid #febd68; 
@@ -56,7 +56,7 @@ marquee{
     height: 3.8rem,;
     background-size: cover;
     width: 6.4rem;
-    margin-right: 5px;
+    margin-right: 0.3125rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,7 +64,7 @@ marquee{
 
                                         /* box 2 */
 .nav-add{
-padding-top: 10px; 
+padding-top: 0.85rem; 
     
 }
 #sp1{
@@ -72,7 +72,7 @@ padding-top: 10px;
     color:#ffffff;
 }
 #sp2{
-    font: 14px arial;
+    font: 0.875rem arial;
     color: #ffffff;
     font-weight: 700;
 }
@@ -82,7 +82,7 @@ padding-top: 10px;
     justify-content: center;
      align-items: center;
      width: 800px;
-     height: 60px;
+     height: 3.75rem;
      background-color: #0f1111;
 }
 
@@ -94,33 +94,33 @@ padding-top: 10px;
 #se1{
     color: #0f1111;
     background-color: #f3f3f3;
-    width: 55px;
-    height: 40px;
-    padding-left: 5px;
+    width: 3.4375rem;
+    height: 2.5rem;
+    padding-left: 0.3125rem;
     border: 1px solid;
-    border-top-left-radius: 5px ;
-    border-bottom-left-radius: 5px ;
+    border-top-left-radius: 0.3125rem ;
+    border-bottom-left-radius: 0.3125rem ;
     align-self: center;
 }
 
 #inp1{
     width: 100%;
-    height: 40px;
-    font-size: 14px;
+    height: 2.5rem;
+    font-size: 0.875rem;
     color: #cccccc;
     font-weight: 700;
     font-family: Arial;
 }
 
 .nav-searchicon{
-    width: 45px;
-    height: 40px;
+    width: 2.8125rem;
+    height: 2.5rem;
     background-color: #febd68;
     color: #0f1111;
     display: flex;
     justify-content: center;
-    border-top-right-radius: 5px ;
-    border-bottom-right-radius: 5px ;
+    border-top-right-radius: 0.3125rem;
+    border-bottom-right-radius: 0.3125rem;
     align-items: center;
     align-self: center;
 }
@@ -130,12 +130,12 @@ padding-top: 10px;
 
                                                         /* box 4 */
 .nav-account{
-    margin-top: 10px;
-    padding-top: 3px;
+    margin-top: 0.85rem;
+    padding-top: 0.1875rem;
 
 }
 #sp3{
-    font-size: 12px;
+    font-size: 0.9rem;
     color: #ffffff;
     font-weight: 600;
 }
@@ -143,7 +143,7 @@ padding-top: 10px;
 .nav-account select{
     background-color: #0f1111;
     color: #f3f3f3;
-    font: 15px arial 700; 
+    font: 1rem arial 700; 
     border: none;
     font-weight: 700;
     margin-left: -3px;
@@ -157,27 +157,27 @@ padding-top: 10px;
 
 #sp4{
     color: #ffffff;
-    font: 600 12px arial;
-    margin-top: 9px;
+    font: 600 0.9rem arial;
+    margin-top: 1rem;
 }
 
 #sp5{
     color: #ffffff;
     font: 600 14px arial;
-    margin-top: 18px;
+    margin-top: 1.125rem;
 }
                                                                 
                                 /* box 6*/
 
 .nav-cart{
-    margin-top: 10px;
+    margin-top: 0.85rem;
 }  
 
 #sp7{
     font: 17px arial 800 ;
 }
 .nav-cart i{
-    font-size: 30px;
+    font-size: 1.875rem;
 }              
 
 
@@ -186,7 +186,7 @@ padding-top: 10px;
 
 .toolbar{
     width: 100%;
-    height: 40px;
+    height: 2.5rem;
     color: #0f1111;
     background-color: #232f3e;
     display: flex;
@@ -287,12 +287,12 @@ padding-top: 10px;
     margin-top: 20px;
 }
 #img4-1{
-    width: 156px;
-    height: 116px;
+    width: 9.75rem;
+    height: 7.25rem;
 }
 #img4-2{
-    width: 156px;
-    height: 116px;
+    width: 9.75rem;
+    height: 7.25rem;
     background-size: cover;
 }
 
@@ -305,13 +305,15 @@ padding-top: 10px;
     justify-content: space-between;
 }
 #img4-3{
-    width: 156px;
+    width: 9.75rem;
+    height: 7.25rem;
     background-size: cover;
-    height: 116px;
 }
 #img4-4{
-    width: 156px;
-    height: 116px;
+    width: 9.75rem;
+    height: 7.25rem;
+    background-size: cover;
+
 }
 #sp8{
     color: #0f1111;
@@ -328,7 +330,7 @@ padding-top: 10px;
 
 .image{
     width: 23%;
-    height: 385px;
+    height: 24.0624rem;
  }
  
 
@@ -340,19 +342,19 @@ padding-top: 10px;
     margin-left: 20px;
  }
  .inside-pic{
-    width: 270px;
-    height: 310px;
+    width: 16.875;
+    height: 19.375rem;
     background-size: cover;
-    margin-left: 20px;
+    margin-left: 1.25rem;
  }
 
  
 .image a{
-    margin-top: 30px;
-    margin-left: 30px;
+    margin-top: 1.875;
+    margin-left: 1.875;
     text-decoration: none;
     color: #2e2f3e;
-    font-size: 18px;
+    font-size: 1.05rem;
 }
 .image a:hover{
     text-decoration: underline;
@@ -367,15 +369,15 @@ padding-top: 10px;
 }
 
 .sign-in h2{
-    font: 21px;
+    font: 1.3125rem;
     font-style: arial;
 }
 .sign-in button{
-    width: 270px;
-    height: 29px;
+    width: 16.875;
+    height: 1.8125;
     background-color:yellow;
     color: #0f1111;
-    border-radius: 10px;
+    border-radius: 0.85rem;
     border: none;
     align-self: center;
     margin-top: 1.4rem;
@@ -387,8 +389,8 @@ padding-top: 10px;
 }
 
 .image-img{
-    width: 300px;
-    height: 250px;
+    width: 18.75rem;
+    height: 15.625rem;
     background-image: url("\(92\).jpg");
     background-color: rgb(249, 192, 255);
     text-align: center;
@@ -402,15 +404,15 @@ padding-top: 10px;
 
 .container-shop2 div{
     background-color: #ffffff;
-    margin-top: 20px;
+    margin-top: 1.25rem;
 }
 
 .back-to-top{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 40px;
-    height: 50px;
+    margin-top: 2.5rem;
+    height: 3.125rem;
     width: 100%;
     background-color: #232f3e ;
 }
@@ -424,7 +426,7 @@ padding-top: 10px;
 
 .options{
     width: 100%;
-    height: 350px;
+    height: 21.875rem;
     display: flex;
     justify-content: space-around;
     background-color: #2e2f3e;
@@ -439,8 +441,8 @@ padding-top: 10px;
 .option-1 a{
     text-decoration: none;
     color: #999999;
-    font-size: 19px;
-    margin-top: 10px;
+    font-size: 1.1875rem;
+    margin-top: 0.85rem;
     font-style: arial;
 }
 .option-1 a:hover{
@@ -450,7 +452,7 @@ padding-top: 10px;
 
 .bottom-menu{
     width: 100%;
-    height: 88px;
+    height: 5.5rem;
     background-color: #2e2f3e;
     display: flex;
     justify-content: center;
@@ -459,19 +461,19 @@ padding-top: 10px;
 
 .bottom-menu span{
     border:1px solid #ffffff; 
-    padding: 5px;
-    margin: 15px;
+    padding: 0.3125rem;
+    margin: 3.125rem;
     border-radius: 3px ;
     color: #ffffff;
-    font: 21px;
+    font: 1.3125rem;
 
 
 }
 
 
 .img{
-    width: 110px;
-    height: 68px;
+    width: 6.875rem;
+    height: 4.25rem;
     background-size: cover;
-    margin-left: 10px;
+    margin-left: 0.85rem;
 }
